src/objects/UCLA_PTSD_RI__c.object
<CustomObject>
    <fields>
        <fullName>UCLA_S3Q4_I_feel_angry__c</fullName>
        <inlineHelpText>I feel grouchy, angry or mad.</inlineHelpText>
        <label>UCLA S3Q4 I feel angry</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_S3Q5_I_have_bad_dreams__c</fullName>
        <inlineHelpText>I have dreams about what happened or other bad dreams.</inlineHelpText>
        <label>UCLA S3Q5 I have bad dreams</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_S3Q6_I_feel_I_relive_experience__c</fullName>
        <inlineHelpText>I feel like I am back at the time when the bad thing happened, living through it again.</inlineHelpText>
        <label>UCLA S3Q6 I feel I relive experience</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_S3Q7_I_feel_like_staying_by_myself__c</fullName>
        <inlineHelpText>I feel like staying by myself and not being with my friends.</inlineHelpText>
        <label>UCLA S3Q7 I feel like staying by myself</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_S3Q8_I_feel_alone__c</fullName>
        <inlineHelpText>I feel alone inside and not close to other people.</inlineHelpText>
        <label>UCLA S3Q8 I feel alone</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_S3Q9_I_try_not_to_talk_or_think__c</fullName>
        <inlineHelpText>I try not to talk about, think about, or have feelings about what happened.</inlineHelpText>
        <label>UCLA S3Q9 I try not to talk or think</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UCLA_Single_Traumatic_Event__c</fullName>
        <formula>if(
(if(ispickval( UCLA_S1Q1_In_a_disaster__c ,&quot;Yes&quot;), 1, 0) 
+ if(ispickval( UCLA_S1Q2_In_a_bad_accident__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q3_In_a_place_at_war__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q4_Hit_hard_at_home__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q5_Seeing_family_member_hit__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q6_Beaten_shot_at_threatened__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q7_Seeing_someone_beaten_etc__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q8_Seeing_dead_body__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q9_Having_adult_touch_you__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q10_Violent_injury_of_loved_one__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q11_Painful_medical_treatment__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q12_Forced_to_have_sex__c ,&quot;Yes&quot;), 1, 0)
+ if(ispickval( UCLA_S1Q13_Anything_else__c ,&quot;Yes&quot;), 1, 0)) = 1, 

text(if(ispickval( UCLA_S1Q1_In_a_disaster__c ,&quot;Yes&quot;), 1, if(ispickval( UCLA_S1Q2_In_a_bad_accident__c ,&quot;Yes&quot;), 2, if(ispickval( UCLA_S1Q3_In_a_place_at_war__c ,&quot;Yes&quot;), 3, if(ispickval( UCLA_S1Q4_Hit_hard_at_home__c ,&quot;Yes&quot;), 4, if(ispickval( UCLA_S1Q5_Seeing_family_member_hit__c ,&quot;Yes&quot;), 5, if(ispickval( UCLA_S1Q6_Beaten_shot_at_threatened__c ,&quot;Yes&quot;), 6, if(ispickval( UCLA_S1Q7_Seeing_someone_beaten_etc__c ,&quot;Yes&quot;), 7, if(ispickval( UCLA_S1Q8_Seeing_dead_body__c ,&quot;Yes&quot;), 8, if(ispickval( UCLA_S1Q9_Having_adult_touch_you__c ,&quot;Yes&quot;), 9, if(ispickval( UCLA_S1Q10_Violent_injury_of_loved_one__c ,&quot;Yes&quot;), 10, if(ispickval( UCLA_S1Q11_Painful_medical_treatment__c ,&quot;Yes&quot;), 11, if(ispickval( UCLA_S1Q12_Forced_to_have_sex__c ,&quot;Yes&quot;), 12, if(ispickval( UCLA_S1Q13_Anything_else__c ,&quot;Yes&quot;), 13, 0)))))))))))))), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Single Traumatic Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>old_Assessment_ID__c</fullName>
        <description>ID for AssesmentLegacy object</description>
        <label>old Assessment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>old_RecordType_ID__c</fullName>
        <description>Record ID from Assessment Legacy</description>
        <label>old RecordType ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>UCLA PTSD RI</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>aUCLA PTSD RI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UCLA PTSD RI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>